[package]
name = "clipboard-ext"
version = "0.2.0"
authors = ["Tim Visée <3a4fb3964f@sinenomine.email>"]
description = "A clipboard library providing useful extensions for rust-clipboard."
repository = "https://gitlab.com/timvisee/rust-clipboard-ext"
build = "build.rs"
license = "MIT / Apache-2.0"
readme = "README.md"
keywords = ["clipboard"]
exclude = ["/.github"]
edition = "2018"

[badges]
gitlab = { repository = "timvisee/rust-clipboard-ext", branch = "master" }

[features]
default = ["x11-bin", "x11-fork"]

osc52 = ["base64"]
x11-bin = ["which"]
x11-fork = ["libc", "x11-clipboard"]

[dependencies]
clipboard = "0.5.0"

# Feature: osc52
base64 = { version = "0.11.0", optional = true }

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
# Feature: x11-bin
which = { version = "3.1", optional = true }

# Feature: x11-fork
libc = { version = "0.2", optional = true }
x11-clipboard = { version = "0.3.0", optional = true }

[package.metadata.docs.rs]
all-features = true
