[package]
name = "copypasta-ext"
version = "0.3.0"
authors = ["Tim Visée <3a4fb3964f@sinenomine.email>"]
description = "A clipboard library providing useful extensions for copypasta."
repository = "https://gitlab.com/timvisee/copypasta-ext"
build = "build.rs"
license = "MIT / Apache-2.0"
readme = "README.md"
keywords = ["clipboard"]
exclude = ["/.github"]
edition = "2018"

[badges]
gitlab = { repository = "timvisee/copypasta-ext", branch = "master" }

[features]
default = ["x11-bin", "x11-fork"]

osc52 = ["base64"]
x11-bin = ["which"]
x11-fork = ["libc", "x11-clipboard"]

[dependencies]
copypasta = "0.7.1"

# Feature: osc52
base64 = { version = "0.13.0", optional = true }

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
# Feature: x11-bin
which = { version = "4.0", optional = true }

# Feature: x11-fork
libc = { version = "0.2", optional = true }
x11-clipboard = { version = "0.5.0", optional = true }

[package.metadata.docs.rs]
all-features = true
